# hermes-drive

./: .gitignore  README-md  README.md  pyproject.toml
docs/: api.md  architecture.md  project-brief.md  trip-model.md
samples/: drive-api.http
scripts/: simulate_gps.py
src/hermes_drive/: __init__.py  main.py
src/hermes_drive/api/: app.py  schemas.py
src/hermes_drive/domain/: __init__.py  models.py  movement.py  trip_service.py
src/hermes_drive/storage/: __init__.py  memory.py
tests/: test_api.py  test_movement.py  test_trip_service.py
