[project]
name = "hermes-drive"
version = "0.1.0"
description = "Vehicle trip context and GPS/location ingest service for Hermes."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[project.scripts]
hermes-drive = "hermes_drive.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_drive"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",  # FastAPI commonly uses Depends(...) in route defaults.
    "UP045", # Keep Optional[...] readable while targeting Python 3.9.
]
